Fixed some parsing errors on text, added tests, updated JavaDoc.